--- a/html/navbar.html
+++ b/html/navbar.html
@@ -3,13 +3,14 @@
 
     <img class="w3-image" src="<!--HEADERIMAGE-->" alt="Me" width="1500" height="600">
 
-    <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
+    <div class="w3-display-middle w3-padding-large w3-wide w3-text-light-grey w3-center">
         <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge"><!--TITLE--></h1>
         <h5 class="w3-hide-large" style="white-space:nowrap"><!--TITLE--></h5>
         <h3 class="w3-hide-medium w3-hide-small"><!--SUBTITLE--></h3>
     </div>
 
     <!-- Navbar (placed at the bottom of the header image) -->
+<!--
     <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
         <a href="index.html" class="w3-bar-item w3-button">Home</a>
         <a href="projects.html" class="w3-bar-item w3-button">Projects</a>
@@ -18,9 +19,9 @@
         <a href="photography.html" class="w3-bar-item w3-button">Photography</a>
 
     </div>
-
+-->
     <!-- Navbar on small screens -->
-
+<!--
     <div class="w3-center w3-light-grey w3-padding-16 w3-hide-large w3-hide-medium">
 
         <div class="w3-bar w3-light-grey">
@@ -37,5 +38,27 @@
         </div>
     </div>
 
+-->
 
+<div id="nav">
+	<ul>
+		<li>
+            <a href="index.html" class="w3-bar-item w3-button">Home</a>
+		</li>
+		<li>
+		
+            <a href="projects.html" class="w3-bar-item w3-button">Projects</a>
+		</li>
+		<li>
+            <a href="publications.html" class="w3-bar-item w3-button">Pubs</a>
+		</li>
+		<li>
+            <a href="cv.html" class="w3-bar-item w3-button">CV</a>
+		</li>
+		<li>
+            <a href="photography.html" class="w3-bar-item w3-button">Photos</a>
+		</li>
+</ul>
+
+</div>
 </header>
