--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
         <!-- Header -->
 <header class="w3-display-container w3-content w3-center" style="max-width:1500px">
 
-    <img class="w3-image" src="images/background.jpg" alt="Me" width="1500" height="600">
+    <img class="w3-image" src="images/Banner.png" alt="Me" width="1500" height="600">
 
-    <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
+    <div class="w3-display-middle w3-padding-large w3-wide w3-text-light-grey w3-center">
         <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">STEVE FICK</h1>
         <h5 class="w3-hide-large" style="white-space:nowrap">STEVE FICK</h5>
         <h3 class="w3-hide-medium w3-hide-small"><!--SUBTITLE--></h3>
     </div>
 
     <!-- Navbar (placed at the bottom of the header image) -->
+<!--
     <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
         <a href="index.html" class="w3-bar-item w3-button">Home</a>
         <a href="projects.html" class="w3-bar-item w3-button">Projects</a>
@@ -43,9 +44,9 @@
         <a href="photography.html" class="w3-bar-item w3-button">Photography</a>
 
     </div>
-
+-->
     <!-- Navbar on small screens -->
-
+<!--
     <div class="w3-center w3-light-grey w3-padding-16 w3-hide-large w3-hide-medium">
 
         <div class="w3-bar w3-light-grey">
@@ -62,14 +63,51 @@
         </div>
     </div>
 
+-->
 
+<div id="nav">
+	<ul>
+		<li>
+            <a href="index.html" class="w3-bar-item w3-button">Home</a>
+		</li>
+		<li>
+		
+            <a href="projects.html" class="w3-bar-item w3-button">Projects</a>
+		</li>
+		<li>
+            <a href="publications.html" class="w3-bar-item w3-button">Pubs</a>
+		</li>
+		<li>
+            <a href="cv.html" class="w3-bar-item w3-button">CV</a>
+		</li>
+		<li>
+            <a href="photography.html" class="w3-bar-item w3-button">Photos</a>
+		</li>
+</ul>
+
+</div>
 </header>
         
-<div class="w3-content w3-padding-large w3-margin-top" id="portfolio">
-    <div class="main">
-        <img class="w3-image" src="images/steve2bwborder.JPG" alt="Me" width="150" height="60"><br>
-             I develop tools and datasets for evidence-based decision making. My areas of specialization include environmental modeling, data science, spatial ecology, and restoration ecology.
-            <br><br><a href="https://scholar.google.com/citations?user=Y4h2OOoAAAAJ&hl=en">
+<div class="w3-content w3-padding-large" id="portfolio">
+    
+
+
+
+	<div class="main">
+
+
+	<div id="greeter">
+	
+        <div class="textbox"> 
+	<h1> Steve Fick </h1> <br>           
+	I develop tools and datasets for evidence-based decision making. My areas of specialization include environmental modeling, data science, spatial ecology, and restoration ecology.
+            <br><br>
+</div>
+<img class="avatar" src="images/steve2bwborder.JPG" alt="Me"><br>
+	
+</div>
+
+<a href="https://scholar.google.com/citations?user=Y4h2OOoAAAAJ&hl=en">
                 <i class="ai ai-google-scholar ai-1x"></i></a>   
                 <a href="https://github.com/fickse"<i class="fa fa-github fa-4"></i></a> <a href="https://fickse.wordpress.com/">blog</a>    
                 <a href="https://www.linkedin.com/in/steve-fick-334652195/"> linkedin </a>
