--- a/photography.html
+++ b/photography.html
@@ -28,13 +28,14 @@
 
     <img class="w3-image" src="images/Banner.png" alt="Me" width="1500" height="600">
 
-    <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
+    <div class="w3-display-middle w3-padding-large w3-wide w3-text-light-grey w3-center">
         <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">PHOTOGRAPHY</h1>
         <h5 class="w3-hide-large" style="white-space:nowrap">PHOTOGRAPHY</h5>
         <h3 class="w3-hide-medium w3-hide-small"><!--SUBTITLE--></h3>
     </div>
 
     <!-- Navbar (placed at the bottom of the header image) -->
+<!--
     <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
         <a href="index.html" class="w3-bar-item w3-button">Home</a>
         <a href="projects.html" class="w3-bar-item w3-button">Projects</a>
@@ -43,9 +44,9 @@
         <a href="photography.html" class="w3-bar-item w3-button">Photography</a>
 
     </div>
-
+-->
     <!-- Navbar on small screens -->
-
+<!--
     <div class="w3-center w3-light-grey w3-padding-16 w3-hide-large w3-hide-medium">
 
         <div class="w3-bar w3-light-grey">
@@ -62,7 +63,29 @@
         </div>
     </div>
 
+-->
 
+<div id="nav">
+	<ul>
+		<li>
+            <a href="index.html" class="w3-bar-item w3-button">Home</a>
+		</li>
+		<li>
+		
+            <a href="projects.html" class="w3-bar-item w3-button">Projects</a>
+		</li>
+		<li>
+            <a href="publications.html" class="w3-bar-item w3-button">Pubs</a>
+		</li>
+		<li>
+            <a href="cv.html" class="w3-bar-item w3-button">CV</a>
+		</li>
+		<li>
+            <a href="photography.html" class="w3-bar-item w3-button">Photos</a>
+		</li>
+</ul>
+
+</div>
 </header>
         
 <br>
@@ -70,10 +93,6 @@
 <img src="images/tilden.JPG"  class="photo"/>
 <img src="images/balanced.jpg"  class="photo"/>
 <img src="images/sierra.png"  class="photo"/>
-<img src="images/eye_copernicus.JPG"  class="photo"/>
-<img src="images/sahara.JPG"  class="photo"/>
-<img src="images/Ethiopia.JPG"  class="photo"/>
-<img src="images/big island.JPG"  class="photo"/>
 
 
 
