--- a/projects.html
+++ b/projects.html
@@ -28,13 +28,14 @@
 
     <img class="w3-image" src="images/Banner.png" alt="Me" width="1500" height="600">
 
-    <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
+    <div class="w3-display-middle w3-padding-large w3-wide w3-text-light-grey w3-center">
         <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">PROJECTS</h1>
         <h5 class="w3-hide-large" style="white-space:nowrap">PROJECTS</h5>
         <h3 class="w3-hide-medium w3-hide-small"><!--SUBTITLE--></h3>
     </div>
 
     <!-- Navbar (placed at the bottom of the header image) -->
+<!--
     <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
         <a href="index.html" class="w3-bar-item w3-button">Home</a>
         <a href="projects.html" class="w3-bar-item w3-button">Projects</a>
@@ -43,9 +44,9 @@
         <a href="photography.html" class="w3-bar-item w3-button">Photography</a>
 
     </div>
-
+-->
     <!-- Navbar on small screens -->
-
+<!--
     <div class="w3-center w3-light-grey w3-padding-16 w3-hide-large w3-hide-medium">
 
         <div class="w3-bar w3-light-grey">
@@ -62,79 +63,58 @@
         </div>
     </div>
 
+-->
 
+<div id="nav">
+	<ul>
+		<li>
+            <a href="index.html" class="w3-bar-item w3-button">Home</a>
+		</li>
+		<li>
+		
+            <a href="projects.html" class="w3-bar-item w3-button">Projects</a>
+		</li>
+		<li>
+            <a href="publications.html" class="w3-bar-item w3-button">Pubs</a>
+		</li>
+		<li>
+            <a href="cv.html" class="w3-bar-item w3-button">CV</a>
+		</li>
+		<li>
+            <a href="photography.html" class="w3-bar-item w3-button">Photos</a>
+		</li>
+</ul>
+
+</div>
 </header>
         
 <div class="w3-content w3-padding-large w3-margin-top" id="portfolio">
-
-  <!-- Images (Portfolio) -->
-<div class="main">
-<table>
-  <tr>
-   <td>
-   <img src="images/thumb.PNG" alt="thumb" style="max-width:160px" class="w3-image" /> <br>
-   </td>
-   
-   <td>
-   Using geospatial data and historical records to evaluate conservation and restoration practice effectiveness across the Upper Colorado River Basin
-   </td>
-   </tr>
-   
-  <tr>   
-    <td>
-      <img src="images/thumb_ic.jpg" alt="thumb" style="max-width:160px" />
-    </td>
-    
-    <td>
-      Working with <a href="https://www.zekebaker.com/projects">social scientists</a> to study how <a href="https://sciencemoab.org/climbersplace/">rock climbers at Indian Creek</a> (Bears Ears) evaluate their cultural and ecological impacts in the context of land-use conflict, new technologies and the burgeoning growth of the outdoor recreation industry.
-    </td>
-  </tr>
-
-  <tr>
-    <td>
-        <img src="images/704_2016_b.jpg" alt="thumb" style="max-width:160px" />
-    </td>
-    <td>
-      Testing <a href="https://www.usgs.gov/centers/sbsc/science/new-approaches-restoring-colorado-plateau-grasslands?qt-science_center_objects=0#qt-science_center_objects">novel restoration practices</a> for degraded arid lands with field experiments.</li>
-    </td>
-  </tr>
-
-  <tr>
-    <td>
-      <img src="images/trase.PNG" alt="thumb" style="max-width:160px" />
-    </td>
-    <td>
-      Linking consumers, exporters, and production geographies in the global trade of forest-risk commodities with a <a href="https://www.trase.earth">supply-chain traceability tool</a> (trase).
-    </td>
-  </tr>
-  
-  <tr>
-    <td>
-      <img src="images/WC2.PNG" alt="thumb" style="max-width:160px" />
-    </td>
-    <td>
-      <a href="http://worldclim.org/version2">WorldClim 2</a>: A global climatology dataset updated with data from new stations and satellite archives
-    </td>
-  </tr>
-  </table>
-  
-
-  </div>
-
+<div class="main"> <div id="greeter">
+<img src="images/thumb.PNG" alt="thumb" class="avatar"></img>
+<div class="textbox">
+Using geospatial data and historical records to evaluate conservation and restoration practice effectiveness across the Upper Colorado River Basin<br><br>
 </div>
-
-  
-
+</div> <div id="greeter">
+<img src="images/thumb_ic.jpg" alt="thumb" class="avatar"></img>
+<div class="textbox">
+Working with <a href="https://www.zekebaker.com/projects">social scientists</a> to study how <a href="https://sciencemoab.org/climbersplace/">rock climbers at Indian Creek</a> (Bears Ears) evaluate their cultural and ecological impacts in the context of land-use conflict, new technologies and the burgeoning growth of the outdoor recreation industry.<br><br>
 </div>
-
-  </div>
-
+</div> <div id="greeter">
+<img src="images/704_2016_b.jpg" alt="thumb" class="avatar"></img>
+<div class="textbox">
+Testing <a href="https://www.usgs.gov/centers/sbsc/science/new-approaches-restoring-colorado-plateau-grasslands?qt-science_center_objects=0#qt-science_center_objects">novel restoration practices</a> for degraded arid lands with field experiments.<br><br>
 </div>
-
-
-<!-- End page content -->
+</div> <div id="greeter">
+<img src="images/trase.PNG" alt="thumb" class="avatar"></img>
+<div class="textbox">
+Linking consumers, exporters, and production geographies in the global trade of forest-risk commodities with a <a href="https://www.trase.earth">supply-chain traceability tool</a> (trase).<br><br>
 </div>
-
+</div> <div id="greeter">
+<img src="images/WC2.PNG" alt="thumb" class="avatar"></img>
+<div class="textbox">
+<a href="http://worldclim.org/version2">WorldClim 2</a>: A global climatology dataset updated with data from new stations and satellite archives<br><br>
+</div>
+</div> </div></div>
 
     </body>
 
