--- a/publications.html
+++ b/publications.html
@@ -28,13 +28,14 @@
 
     <img class="w3-image" src="images/Banner.png" alt="Me" width="1500" height="600">
 
-    <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
+    <div class="w3-display-middle w3-padding-large w3-wide w3-text-light-grey w3-center">
         <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">PUBLICATIONS</h1>
         <h5 class="w3-hide-large" style="white-space:nowrap">PUBLICATIONS</h5>
         <h3 class="w3-hide-medium w3-hide-small"><!--SUBTITLE--></h3>
     </div>
 
     <!-- Navbar (placed at the bottom of the header image) -->
+<!--
     <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
         <a href="index.html" class="w3-bar-item w3-button">Home</a>
         <a href="projects.html" class="w3-bar-item w3-button">Projects</a>
@@ -43,9 +44,9 @@
         <a href="photography.html" class="w3-bar-item w3-button">Photography</a>
 
     </div>
-
+-->
     <!-- Navbar on small screens -->
-
+<!--
     <div class="w3-center w3-light-grey w3-padding-16 w3-hide-large w3-hide-medium">
 
         <div class="w3-bar w3-light-grey">
@@ -62,13 +63,36 @@
         </div>
     </div>
 
+-->
 
+<div id="nav">
+	<ul>
+		<li>
+            <a href="index.html" class="w3-bar-item w3-button">Home</a>
+		</li>
+		<li>
+		
+            <a href="projects.html" class="w3-bar-item w3-button">Projects</a>
+		</li>
+		<li>
+            <a href="publications.html" class="w3-bar-item w3-button">Pubs</a>
+		</li>
+		<li>
+            <a href="cv.html" class="w3-bar-item w3-button">CV</a>
+		</li>
+		<li>
+            <a href="photography.html" class="w3-bar-item w3-button">Photos</a>
+		</li>
+</ul>
+
+</div>
 </header>
         
 <div class="w3-content w3-padding-large w3-margin-top" id="portfolio">
 <div class="main">
     <div style="padding-left:1.5em;text-indent:-2.5em;font-size:15px;color:#af5454">
 
+<li><a href=files/Mcnellis_ERL_2023.pdf>McNellis, B.E., Knight, A.C., Nauman, T.W., Chambers, S.N., Brungard, C.W., Fick, S.E., Livensperger, C.G., Borthwick, S. and Duniway, M.C., 2023. Livestock removal increases plant cover across a heterogeneous dryland landscape on the Colorado Plateau. Environmental Research Letters, 18(3), p.034034.</a>
 <li><a href=files/Baker_Environmental_Sociology_2022.pdf>Baker, Zeke, and Stephen E. Fick. 2022. “Loving It to Death: Land Use Conflict, Outdoor Recreation and the Contradictions of Wilderness in Southeast Utah, USA.” Environmental Sociology 1–17.</a>
 <li><a href=files/TBD.pdf>Fick, S.E, M. Duniway, T. Nauman, C. Brungard (2022). What determines the effectiveness of Pinyon-Juniper clearing treatments? Evidence from the remote sensing archive and counter-factual scenarios. Forest Ecology and Management</a>
 <li><a href=files/Schulz_Rangelands_2021.pdf>Schulz, Terri T., et al. "Campfire Conversations at the 2020 Annual Meeting: Insights & Lessons Learned From “Cuss-and-Discuss” Rather Than “Chalk-and-Talk”." Rangelands (2021).</a>
