--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <img class="w3-image" src="images/Banner.png" alt="Me" width="1500" height="600">
 
     <div class="w3-display-middle w3-padding-large w3-wide w3-text-light-grey w3-center">
-        <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge"></h1>
-        <h5 class="w3-hide-large" style="white-space:nowrap"></h5>
+        <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">STEVE FICK</h1>
+        <h5 class="w3-hide-large" style="white-space:nowrap">STEVE FICK</h5>
         <h3 class="w3-hide-medium w3-hide-small"><!--SUBTITLE--></h3>
     </div>
 
@@ -99,7 +99,7 @@
 	<div id="greeter">
 	
         <div class="textbox"> 
-	<h1> Steve Fick </h1> <br>           
+	<!-- <h1> Steve Fick </h1> <br>           -->
 	I develop tools and datasets for evidence-based decision making. My areas of specialization include environmental modeling, data science, spatial ecology, and restoration ecology.
             <br><br>
 </div>
